# MiZumBA

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
Backend/: .env.example  Dockerfile  FRONTEND_INTEGRATION.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-whisper.txt  requirements.txt
Backend/alembic/: env.py  script.py.mako
Backend/alembic/versions/: 4c4168f7aa2e_initial_schema.py  9b2f5d7c1a4e_prod_features.py  c3e8a1f92b4d_one_reaction_per_user.py  d4f9b2e81c5a_add_audio_message_type.py
Backend/app/: main.py
Backend/app/audio/: router.py  schemas.py  service.py
Backend/app/auth/: dependencies.py  models.py  oauth.py  router.py  schemas.py  service.py
Backend/app/channels/: models.py  router.py  schemas.py  service.py
Backend/app/chats/: models.py  router.py  schemas.py  service.py
Backend/app/common/: exceptions.py
Backend/app/core/: config.py  database.py  email.py  redis.py  security.py  utc_const.py
Backend/app/files/: models.py  router.py  schemas.py  service.py  storage.py
Backend/app/geo/: service.py
Backend/app/messages/: models.py  realtime.py  router.py  schemas.py  service.py
Backend/app/notifications/: models.py  router.py  schemas.py  service.py
Backend/app/privacy/: models.py  router.py  schemas.py  service.py
Backend/app/search/: router.py  schemas.py
Backend/app/users/: models.py  router.py  schemas.py  service.py
Backend/app/websocket/: broadcaster.py  events.py  manager.py  (+1 more)
Backend/scripts/: export_openapi.py  seed_demo.py
Backend/tests/: conftest.py
(+56 files in other folders)
